--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,8 @@
 {
   "development": {
     "username": "root",
-    "password": "mysql",
-    "database": "snowcode",
+    "password": "",
+    "database": "nodebird",
     "host": "127.0.0.1",
     "dialect": "mysql",
     "operatorsAliases": 0
